--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
-    margin: 0;
-    background: #e6d7c8;
+  margin: 0;
+  background: #e6d7c8;
 }
 
 canvas {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background: #fff;
-    border-radius: 20px;
-    padding: 10px;
-    cursor: pointer;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  border-radius: 20px;
+  cursor: pointer;
+  border: 10px solid #fff;
 }
